--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pieces of Us - Art Portfolio</title>
+    <title>Hoffer Made</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">Pieces of Us</div>
+        <div class="logo">Hoffer Made</div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -21,13 +20,13 @@
     </header>
     <main>
         <section id="home">
-            <h1>Welcome to Pieces of Us</h1>
-            <p>An artistic journey of self-reflection, growth, and resilience.</p>
+            <h1>Welcome to Hoffer Made</h1>
+            <p>Unique art pieces inspired by self-reflection, growth, and resilience.</p>
         </section>
         <section id="gallery">
             <h2>Gallery</h2>
             <div class="art-grid">
-                <!-- Placeholder images for artwork -->
+                <!-- Placeholder for artwork -->
                 <div class="art-piece"><img src="art1.jpg" alt="Art 1"><p>Artwork 1</p></div>
                 <div class="art-piece"><img src="art2.jpg" alt="Art 2"><p>Artwork 2</p></div>
                 <div class="art-piece"><img src="art3.jpg" alt="Art 3"><p>Artwork 3</p></div>
@@ -35,7 +34,7 @@
         </section>
         <section id="about">
             <h2>About</h2>
-            <p>"Pieces of Us" is a mixed media art project inspired by the beauty of imperfection and the resilience of the human spirit.</p>
+            <p>"Hoffer Made" celebrates creativity, resilience, and the beauty of imperfection. Explore art that tells a story and connects emotionally.</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
@@ -51,11 +50,10 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Pieces of Us. All rights reserved.</p>
+        <p>&copy; 2024 Hoffer Made. All rights reserved.</p>
         <div class="social-links">
             <a href="#">Instagram</a> | <a href="#">TikTok</a>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
